demo/manifests/2-cross-namespace-routing/nginx-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-allowed
  labels:
    expose-apps: "true"
    istio.io/dataplane-mode: ambient
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-prohibited
  labels:
    expose-apps: "false"
    istio.io/dataplane-mode: ambient
