demo/manifests/2-cross-namespace-routing/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-pod
  name: nginx-pod
  namespace: nginx-allowed
spec:
  containers:
    - image: nginx
      name: nginx-pod
      resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-pod
  name: nginx-pod
  namespace: nginx-prohibited
spec:
  containers:
    - image: nginx
      name: nginx-pod
      resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
