demo/manifests/2-cross-namespace-routing/nginx-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-allowed
  namespace: nginx-allowed
spec:
  parentRefs:
    - name: prod-gateway
      namespace: infra-gateway-system
  hostnames: ["allowed.apps.example.com"]
  rules:
    - matches: []
      backendRefs:
        - name: nginx-pod
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-prohibited
  namespace: nginx-prohibited
spec:
  parentRefs:
    - name: prod-gateway
      namespace: infra-gateway-system
  hostnames: ["prohibited.apps.example.com"]
  rules:
    - matches: []
      backendRefs:
        - name: nginx-pod
          port: 80
